--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
 
   # stand alone
   provider: ^4.3.2+2
+  path_provider: ^1.6.18
+
+  # gps
+  google_maps_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +54,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/trails/conifer_walk/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
