--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/trails/conifer_walk/
+    - assets/trails/conifer_walk/images/
+    - assets/trails/maple_walk/
+    - assets/trails/maple_walk/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
