added support for iOS maps. implemented image handler service.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - assets/trails/maple_walk/images/
     - assets/trails/gentle_giants_2_walk/
     - assets/trails/gentle_giants_2_walk/images/
+    - assets/tree_icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
