fixed db provider. implemented stats screen.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
 
   # gps
   google_maps_flutter: ^1.0.2
-  geolocator: ^6.0.0+4
+  geolocator: ^6.1.1
   location: ^3.0.2
 
 dev_dependencies:
